# moveit_docker

./: base_dependencies.repos  bashrc  docker-compose.yaml
data/: .~lock.focus_pose_dict_20241015_203620.csv#  carbonfiber_cf2_full.csv  carbonfiber_fswm_full2.csv  carbonfiber_sobelfswm.csv  chessqueen_combinedfocus_full.csv  cork_cf1_full.csv  ehc_sobel_carbonfibersmooth.csv  ehc_squaredgrad_carbonfibersmooth.csv  focus_pose_dict.csv  focus_pose_dict_20241015_203620.csv  focus_pose_dict_20241015_211848.csv  focus_pose_dict_20241022_215310_sobel_copper_half.csv  focus_pose_dict_20241022_215427_sobel_copper_none.csv  focus_pose_dict_20241022_215552_squaredgrad_copper_none.csv  focus_pose_dict_20241022_215956_sqsobel_copper_full.csv  focus_pose_dict_20241022_220226_sqsobel_copper_none.csv  focus_pose_dict_20241111_200106.csv  focus_pose_dict_20241111_200717.csv  focus_pose_dict_20241111_202937.csv  fswm_10.csv  sobel_10.csv  (+23 more)
inspection_robot_service/: CMakeLists.txt  focus_pose_dict.csv  package.xml
inspection_robot_service/config/: controllers_mod.yaml  ur_servo.yaml
inspection_robot_service/launch/: hello_moveit_ur_launch.py  ur_control.launch.py  ur_moveit.launch.py
inspection_robot_service/src/: OG_inspection_robot_service.cpp  PID_python_pose_client.py  focus_manual_move.py  inspection_robot_service.cpp  inverse_python_pose_client.py  moveit_py.py  multi_speed_autofocus.py  no_autofocus.py  python_pose_client.py  send_pose.py  single_speed_autofocus.py  time_sync.py
inspection_robot_service/src/Old stuff/: devving_python_pose_client.py  ompl_inspection_robot_service.cpp  ompl_python_pose_client.py  pre_dynamic_reconfigure_python_pose_client.py  pre_dynamic_send_twist_alone.py  send_twist_alone.py  test_receive_pose.py  time_sync_python_pose_client.py
(+178 files in other folders)
